[project]
name = "rayrl-tutorial"
version = "0.1.0"
description = "Ray RLlib Tutorial: From Beginner to Industry Specialist"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Ray ecosystem
    "ray[rllib,tune,serve]>=2.9.0",

    # Deep learning
    "torch>=2.0.0",

    # RL environments
    "gymnasium>=0.29.0",
    "gymnasium[classic-control]",

    # Scientific computing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",

    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",

    # Monitoring
    "tensorboard>=2.14.0",

    # Hyperparameter tuning
    "optuna>=3.3.0",
    "hyperopt>=0.2.7",

    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
gpu = [
    "torch>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
